# ecommerce_ds

./: README.md  pyproject.toml
Fashion/: Analytics.odt  analytics.py  centroides_clusters.csv  dashboards.py  forecast_monthly.py  forecast_user_brand.py  testes.py
Fashion/data/07_model_output/: user_brand_features.csv
conf/: logging.yml
conf/base/: catalog.yml  parameters_classificar_marcas.yml  parameters_cluster_clientes.yml  parameters_fashion_cleaning.yml  parameters_fashion_etl.yml
src/fashion_analysis/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/fashion_analysis/pipelines/classificar_marcas/: __init__.py  nodes.py  pipeline.py
src/fashion_analysis/pipelines/cluster_clientes/: __init__.py  nodes.py  pipeline.py
src/fashion_analysis/pipelines/fashion_cleaning/: __init__.py  nodes.py  pipeline.py
src/fashion_analysis/pipelines/fashion_etl/: __init__.py  nodes.py  pipeline.py
tests/pipelines/classificar_marcas/: test_pipeline.py
tests/pipelines/cluster_clientes/: test_pipeline.py
tests/pipelines/fashion_cleaning/: test_pipeline.py
tests/pipelines/fashion_etl/: test_pipeline.py
